Fix code formatting being able to go off-screen

--- a/static/master-styles.css
+++ b/static/master-styles.css
@@ -361,3 +361,7 @@ section, #banner {
 .pfp {
     width: 100px;
 }
+
+div.code {
+    overflow-x: scroll;
+}
